# txt-to-anki

./: README.md  main.py  pyproject.toml  pyrightconfig.json
data/: Jog.txt  questions.json  questions.txt
src/: gpt.py  txt_to_anki.py
